--- a/CrudTest/siteA.html
+++ b/CrudTest/siteA.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     
-    <button onclick="sendCookie()">inject cookie on site A with javascript</button>
-    <button onclick="sendCookieTomywebsiteSiteA()">Send GET Request to http://mywebsite/siteA.html</button>
-    <button onclick="sendCookieTomlocalhostSiteB()">Send GET Request to https://localhost:44393/siteB.html</button>
+    <button onclick="sendCookie()">Inject cookie on this with JavaScript</button>
+    <button onclick="sendCookieTolocalhost44393()">Send GET Request to https://localhost:44393/siteA.html</button>
+    <button onclick="sendCookieTolocalhost44394()">Send GET Request to https://localhost:44394/siteA.html</button>
     <script>
         function sendCookie() {
-            document.cookie = "CookieFromSiteA=cookie_value; expires=Thu, 18 Dec 2025 12:00:00 UTC; path=/;Secure;SameSite=Strict";
+            document.cookie = "CookieFromSiteA=cookie_value; expires=Thu, 18 Dec 2025 12:00:00 UTC;domain=localhost; path=/;Secure;SameSite=Strict";
         }
-	
-	function sendCookieTomywebsiteSiteA() {
-                  var xhr = new XMLHttpRequest();
-            xhr.open("GET", "http://mywebsite/siteA.html", true); // Replace "https://example.com/api/data" with the URL you want to request
+
+        function sendCookieTolocalhost44393() {
+            var xhr = new XMLHttpRequest();
+            xhr.open("GET", "https://localhost:44393/siteA.html", true);
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === XMLHttpRequest.DONE) {
                     if (xhr.status === 200) {
@@ -31,9 +31,9 @@
             xhr.send();
         }
 
-	function sendCookieTomlocalhostSiteB() {
-                  var xhr = new XMLHttpRequest();
-            xhr.open("GET", "https://localhost:44393/siteB.html", true); // Replace "https://example.com/api/data" with the URL you want to request
+        function sendCookieTolocalhost44394() {
+            var xhr = new XMLHttpRequest();
+            xhr.open("GET", "https://localhost:44394/siteA.html", true);
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === XMLHttpRequest.DONE) {
                     if (xhr.status === 200) {
@@ -45,7 +45,6 @@
             };
             xhr.send();
         }
-	
     </script>
 </body>
 </html>
