--- a/CrudTest2/siteA.html
+++ b/CrudTest2/siteA.html
@@ -11,15 +11,20 @@
     <button onclick="sendCookie()">Inject cookie on this site with JavaScript</button>
     <button onclick="sendCookieTolocalhost44393()">Send GET Request to mywebsite1</button>
     <button onclick="sendCookieTolocalhost44394()">Send GET Request to mywebsite2</button>
+ <button onclick="sendCookieTolocalhost44393subdomain()">Send GET Request to mywebsite1</button>
     <script>
-        function sendCookie() {
-            document.cookie = "CookieFromSiteA=cookie_value; expires=Thu, 18 Dec 2025 12:00:00 UTC;domain=mywebsite2; path=/;Secure;SameSite=None";
+              function sendCookie() {
+			var currentDate = new Date();
+
+		// Convert the date object to a string
+		var cookieValue = currentDate.toLocaleString();
+            document.cookie = "mywebsite1cookie="+cookieValue +"; expires=Thu, 18 Dec 2025 12:00:00 UTC;path=/;Secure;SameSite=None";
         }
 
         function sendCookieTolocalhost44393() {
             var xhr = new XMLHttpRequest();
  	    xhr.withCredentials = true; // Set withCredentials to true
-            xhr.open("GET", "https://mywebsite2:44394/siteA.html", true);
+            xhr.open("GET", "https://mywebsite1:44393/siteA.html", true);
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === XMLHttpRequest.DONE) {
                     if (xhr.status === 200) {
@@ -36,6 +41,22 @@
             var xhr = new XMLHttpRequest();
            xhr.withCredentials = true; // Set withCredentials to true
             xhr.open("GET", "https://mywebsite2:44394/siteA.html", true);
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === XMLHttpRequest.DONE) {
+                    if (xhr.status === 200) {
+                        console.log("Response:", xhr.responseText);
+                    } else {
+                        console.error("Request failed:", xhr.status);
+                    }
+                }
+            };
+            xhr.send();
+        }
+
+      function sendCookieTolocalhost44393subdomain() {
+            var xhr = new XMLHttpRequest();
+           xhr.withCredentials = true; // Set withCredentials to true
+            xhr.open("GET", "https://mywebsite1:44393/subdomain/sub.html", true);
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === XMLHttpRequest.DONE) {
                     if (xhr.status === 200) {
