add get backend call

--- a/CrudTest/siteA.html
+++ b/CrudTest/siteA.html
@@ -22,7 +22,7 @@
 
 		// Convert the date object to a string
 		var cookieValue = currentDate.toLocaleString();
-            document.cookie = "mywebsite1cookie="+cookieValue +"; expires=Thu, 18 Dec 2025 12:00:00 UTC;path=/;Secure;SameSite=Lax";
+            document.cookie = "mywebsite1cookie="+cookieValue +"; expires=Thu, 18 Dec 2025 12:00:00 UTC;path=/;Secure;SameSite=None;Partitioned";
         }
 
         function sendCookieTolocalhost44393() {
