--- a/CrudTest2/siteA.html
+++ b/CrudTest2/siteA.html
@@ -24,7 +24,7 @@
 
         function sendCookieTolocalhost44393() {
             var xhr = new XMLHttpRequest();
- 	    xhr.withCredentials = true; // Set withCredentials to true
+ 	   xhr.withCredentials = true;
             xhr.open("GET", "https://mywebsite1:44393/siteA.html", true);
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === XMLHttpRequest.DONE) {
@@ -40,7 +40,7 @@
 
         function sendCookieTolocalhost44394() {
             var xhr = new XMLHttpRequest();
-           xhr.withCredentials = true; // Set withCredentials to true
+          <!-- xhr.withCredentials = true;  -->
             xhr.open("GET", "https://mywebsite2:44394/siteA.html", true);
             xhr.onreadystatechange = function() {
                 if (xhr.readyState === XMLHttpRequest.DONE) {
@@ -73,6 +73,7 @@
  	function redirectTomywebsite1() {
 		 window.location.href = "https://mywebsite1:44393/siteA.html"; 
         }
+	
     </script>
 </body>
 </html>
